# Example-from-the-cloud

./: exercise.py  funtions.py  pyproject.toml
