[tool.poetry]
name = "example-from-the-cloud"
version = "0.1.0"
description = ""
authors = ["Jonathan <chavez.jonathan5@yahoo.es>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
